2007-11-08 If available, use existing pyparsing installation - DSD 

2007-11-07 Removed old enthought.traits from lib/matplotlib, added 
           Gael Varoquaux's enthought.traits-2.6b1, which is stripped 
           of setuptools. The package is installed to site-packages 
           if not already available - DSD

2007-11-02 Commited Phil Thompson's patch 1599876, fixes to Qt4Agg 
           backend and qt4 blitting demo - DSD 

2007-10-31 Made log color scale easier to use with contourf;
           automatic level generation now works. - EF

2007-10-24 Added ax kwarg to Figure.colorbar and pyplot.colorbar - EF

2007-10-19 Removed a gsave/grestore pair surrounding _draw_ps, which
           was causing a loss graphics state info (see "EPS output
           problem - scatter & edgecolors" on mpl-dev, 2007-10-29)
           - DSD

2007-10-15 Fixed a bug in patches.Ellipse that was broken for
           aspect='auto'.  Scale free ellipses now work properly for
           equal and auto on Agg and PS, and they fall back on a
           polygonal approximation for nonlinear transformations until
           we convince oursleves that the spline approximation holds
           for nonlinear transformations. Added
           unit/ellipse_compare.py to compare spline with vertex
           approx for both aspects. JDH

2007-10-05 remove generator expressions from texmanager and mpltraits.
           generator expressions are not supported by python-2.3 - DSD

2007-10-01 Made matplotlib.use() raise an exception if called after
           backends has been imported.

2007-09-30 Modified update* methods of Bbox and Interval so they
           work with reversed axes.  Prior to this, trying to
           set the ticks on a reversed axis failed with an
           uninformative error message. - EF

2007-09-30 Applied patches to axes3d to fix index error problem - EF

2007-09-24 Applied Eike Welk's patch reported on mpl-dev on 2007-09-22