@@ -4068,6 +4068,8 @@ class Axes(martist.Artist):
 
            Optional kwargs control the PatchCollection properties:
         %(PatchCollection)s
+
+        A Collection instance is returned
         """
 
         if not self._hold: self.cla()
